refactor(api): conversion to record pattern classes